--- a/ch5-spatial.tex
+++ b/ch5-spatial.tex
@@ -1,13 +1,13 @@
 \chapter{Localizing Anomalies via Spatial-MSMA}
 \label{ch:localizing}
 
-Generic anomaly detection methods operate on the full input and make binary predictions on whether a sample is anomalous. They do not, however, provide information about the input components that led to that assessment. It is often desirable to identify the specific regions within an image that are contributing to its atypicality. Such localization allows for increased model interpretability as well as directing future investigation. 
+In the preceding chpaters, we have discussed sample-wise anomaly detection. These methods operate on the full input and make binary predictions on whether a sample is anomalous. They do not, however, provide information about the input components that led to that assessment. It is often desirable to identify the specific regions within an image that are contributing to its atypicality. Such localization allows for increased model interpretability as well as directing future investigation. 
 
 For instance, in healthcare, the ability to interpret a model's prediction empowers medical practitioners to visually corroborate the identified regions of interest. Interpretation may also pave the way for novel insights into the disease. Furthermore, localizing anomalies enables targeted diagnosis and intervention planning based on the factors contributing to the detected outlier.
 
-Another industry where anomaly detection has critical real-world value, is manufacturing~\cite{Bergmann_2019_CVPR}. Supply chain industries often need to automate defect identification to reduce operational costs and time requirements. This is typically accomplished through image-based anomaly detection. As the type of defects that can emerge in production are unknown, these systems utilize unsupervised models to enable broad detection. Additionally,  the models are tasked to output pixel-level segmentations to help manufacturers design solutions to remediate the defects. Although many unsupervised anomaly localization methods have been proposed in recent years, it still remains an active area of research~\cite{liu2024deep}. 
+Another industry where anomaly detection has critical real-world value, is manufacturing~\cite{Bergmann_2019_CVPR}. Supply chains often need to automate defect identification to reduce operational costs and time requirements. This is typically accomplished through image-based anomaly detection. As the type of defects that can emerge in production are unknown, these systems utilize unsupervised models to enable broad detection. The models are tasked to output pixel-level segmentations to help manufacturers design solutions to remediate the defects. Although many unsupervised anomaly localization methods have been proposed in recent years, it still remains an active area of research~\cite{liu2024deep}. 
 
-This chapter will introduce Spatial-MSMA: an extended version of MSMA with localization capabilities. Note that the benefits of localization are twofold. First, it allows the possibility of detecting physical anomalies. For example, Spatial-MSMA has the capabilities of highlighting brain regions with lesions even though it was never trained with labeled data. Second, localization enables exploratory insights, gained through the interpretation of heatmaps. The two benefits are orthogonal with respect to one another and significantly expand the use-case for MSMA.
+This chapter will introduce Spatial-MSMA: an extended version of MSMA with localization capabilities. Note that the benefits of localization are twofold. First, it allows the possibility of detecting physical anomalies. For example, Spatial-MSMA is capable of highlighting brain lesions even though it was never trained with labeled data. Second, localization enables exploratory insights, gained through the interpretation of heatmaps. The two benefits are orthogonal with respect to one another and significantly expand the use-case for MSMA.
 
 \section{Existing Techniques for Anomaly Localization}
 
@@ -35,16 +35,16 @@ The basic assumption of MSMA is that inliers will occupy distinct regions in the
 
 However, MSMA is also amenable for \textit{subsets} of features. For instance, we may divide an image into patches and consider the score-norms of each patch independently. Now, we can ask the question: Does this \textit{patch} belong to the inliers? As before, MSMA will output a likelihood estimate of a test patch belonging to the inliers, but this time \textit{only} considering information present at the given patch location.
 
-It is possible to naively extend MSMA to consider patches. One can decompose the image into a regular grid, and train an independent MSMA model for each grid location. One may even reduce computational costs by running training/inference in parallel for each patch location. However, while this approach is straightforward, it has some limitations.
+It is possible to naively extend MSMA to consider patches. One can decompose the image into a regular grid, and train an independent MSMA model for each grid location. One may even reduce computational costs by running training/inference in parallel for each patch location. However, while this approach is straightforward, it leaves much room for improvement.
 
 \subsection*{Image Patches are Not Independent of Each Other}
-Namely, we cannot ignore \textit{spatial locality}: the notion that neighbouring image patches are highly correlated. Furthermore, even patches which are spatially apart may depend on each other. Consider an image of a face.
+Namely, we can leverage \textit{spatial locality}: the notion that neighbouring image patches are highly correlated. Furthermore, even patches which are spatially apart may depend on each other. Consider an image of a face.
 % Observing the patches corresponding to the left eye gives us rich information about what we may observe in regions distal to the left eye.
 Observing patches of the left eye gives us rich information about what we may observe in the location of the \textit{right} eye, even if the location of the right eye is distal to the left.
-One can leverage this information to reason about the typicality of a queried patch. For instance, observing a brown-colored right eye is typical. However, observing a brown colored right eye \textit{given} a black-colored left eye, is atypical.
+One can incorporate this information into the decision making process to reason about the typicality of a queried patch. For instance, observing a brown-colored right eye is typical. However, observing a brown colored right eye \textit{given} a black-colored left eye, is atypical.
 
 \subsection*{Modeling Conditional Likelihoods}
-Following the motivation above, one can employ a conditional model where in addition to the contents of a patch, its position and surrounding context are also taken into account.As such, I posit to use a conditional likelihood model as the basis of my patch-based anomaly detector.
+Following the motivation above, one can employ a conditional model where in addition to the contents of a patch, its position and surrounding context are also taken into account. As such, I posit to use a conditional likelihood model as the basis of my patch-based anomaly detector.
 
 Concretely, the model will be conditioned on the patch position and the image features. Let $ s_p = \{s(x_p)\}_{i=1}^{L}$ be the multi-scale score tensor for a given patch $x_p$ at location $p$, belonging to the image $x$. Let $h(x)$ are the feature vectors of the image $x$ computed by a convolutional network $h$. I propose to estimate the conditional likelihood model $p(s_p | p, h(x))$. As this model will output likelihoods of score-norms for each patch conditioned on the surrounding spatial information, the model is called Spatial-MSMA.
 
@@ -68,7 +68,7 @@ For this experiment, the score model was trained on the \textit{Cables} class. T
 Following the encouraging results on the MvTec dataset, this section will consider the more challenging task of detecting anomalies in medical images. The purpose of this case study is to reflect a real world usecase: automatic detection and segmentation of pathologies. As this is a feasibility experiment, one needs to minimize confounding factors that can be introduced due to a distributional shift between the training and testing populations. Thus, the anomalies will be simulated on a held out inlier test set, ensuring that the introduced anomalies are the \textit{primary} factor differentiating the test set from the inlier population.
 
 \subsection*{Experiment Details}
-The model is trained on a population of typically developing adolescent brains, retrieved from the ABCD study~\cite{Casey2018adolescent}. We use both T1-weigthed and T2-weighted images. As the images are high-resolution 3D MRIs, they require a lot of GPU memory during training. In order to fit a batch size of 4 per GPU, the images were downsampled to a pixel spacing of 2mm isotropic. They were further cropped by the largest brain mask, computed from the training data. After some padding to make the images multiples of 2, the resulting 3D volume was of size 96x112x80. The anomalies were simulated using lesion simulator tool~\cite{Filho_2019}, available as the MSLesionSimulator extension~\footnote{https://www.slicer.org/wiki/Documentation/Nightly/Modules/MSLesionSimulator} of the Slicer3D software package~\cite{fedorov3DSlicerImage2012}. The lesion load parameter was set to 20 and the rest of the hyperparameters were kept at their default values. A post processing step was performed to enhance the lesion intensity by a factor of $1.5$.
+The model is trained on brain MRI scans belonging to a population of typically developing school-age children, retrieved from the ABCD study~\cite{Casey2018adolescent}. We use both T1-weigthed and T2-weighted images. As the images are high-resolution 3D MRIs, they require a lot of GPU memory during training. In order to fit a batch size of 4 per GPU, the images were downsampled to a pixel spacing of 2mm isotropic. They were further cropped by the largest brain mask, computed from the training data. After some padding to make the images multiples of 2, the resulting 3D volume was of size 96x112x80. The anomalies were simulated using lesion simulator tool~\cite{Filho_2019}, available as the MSLesionSimulator extension~\footnote{https://www.slicer.org/wiki/Documentation/Nightly/Modules/MSLesionSimulator} of the Slicer3D software package~\cite{fedorov3DSlicerImage2012}. The lesion load parameter was set to 20 and the rest of the hyperparameters were kept at their default values. A post processing step was performed to enhance the lesion intensity by a factor of $1.5$.
 
 The score-norms were retrieved from a diffusion model, using a 3D convolutional UNet-like architecture. The VESDE formulation was used, with 2000 timesteps. The minimum sigma was set to 0.06, which is the average standard deviation of the image intensities. This is done so that smallest noise scale, at minimum, is able to capture the intensity variation of within an image. Following the suggestion of ~\cite{song2020score}, the maximum sigma was set to 545.0 which is the 99-th percentile of the pairwise distance in the training set. This is done to allow the largest noise distribution to maximally cover the support of the data distribution i.e. $p_{\sigma_\text{max}}(x) \approx \mathcal{N}(x| 0, \sigma_\text{max}^2I)$. The model was trained for 1.5 million iterations, by which point the validation loss had started to flatten out. The batch size was doubled at roughly the half way point during training. This is a simple yet effective method proposed by~\cite{le2018dont}, to effectively anneal the learning rate without having to use a decay schedule. The authors also found that increasing the batch size also reduced the number of parameter updates required to reach the same test accuracies as strategies for decaying the learning rate.
 
@@ -81,12 +81,12 @@ Spatial-MSMA was compared to a selection of models that encompass a broad range 
 
 For the reconstruction-based baseline, I chose an autoencoder model by~\cite{aelu2023} owing to its success on volumetric brain MRIs. The model uses a ResNet-like architecture is trained using a reconstruction objective based on a Mean Squared Error (MSE). The authors also provide a publicly available implementation. This method is denoted as AE in Table~\ref{lesion_results}.
 
-Two generative-model based approaches were also included in the comparison. First is an imputation-based approach inspired by~\cite{liuUnsupervisedOutofDistributionDetection2023} which uses a checkerboard mask to in-paint different regions of the image (denoted as Inpaint in Table~\ref{lesion_results}). This method performs multiple runs of imputation, alternating the checkerboard pattern each time and computing the average error across all runs. Second is a restoration-based approach (denoted as Restoration in Table~\ref{lesion_results}), which first adds noise to the image and then invokes the sampling procedure of the diffusion model to iteratively generate the restored counterpart. Following~\cite{wyattAnoddpmAnomalyDetection2022}, the sampling procedure was initiated from 1/4th of the original timesteps. However, unlike~\cite{wyattAnoddpmAnomalyDetection2022}, I did not use Simplex noise during training/inference as recent research has shown that it may not be necessary (and sometimes detrimental)~\cite{kascenas2023}. 
+Two generative-model based approaches were also included in the comparison. First is an imputation-based approach inspired by~\cite{liuUnsupervisedOutofDistributionDetection2023} which uses a checkerboard mask to in-paint different regions of the image (denoted as Inpaint in Table~\ref{lesion_results}). This method performs multiple runs of imputation, alternating the checkerboard pattern each time and computing the average error across all runs. Second is a restoration-based approach (denoted as Restoration in Table~\ref{lesion_results}), which first adds noise to the image and then invokes the sampling procedure of the diffusion model to iteratively generate the restored counterpart. Following~\cite{wyattAnoddpmAnomalyDetection2022}, the sampling procedure was initiated from 1/4th of the original timesteps. However, unlike~\cite{wyattAnoddpmAnomalyDetection2022}, I did not use Simplex noise during training/inference as recent research has shown that it may not be necessary (and sometimes detrimental)~\cite{kascenas2023}. Note that these technique are agnostic to the diffusion framework, which allows me to use the same diffusion model that was used as the backbone of Spatial-MSMA. This keeps the comparison fair and limits confounding factors as the diffusion model was trained to convergence and is able to generate realisitic looking samples.
 
 Lastly, GradCAM was included as a representative of attribution-based approaches. Specifically, I used Guided-GradCAM~\cite{Selvaraju2016GradCAMVE} which combines saliency maps (with some modifications) and GradCAM to give superior results to vanilla GradCAM. The gradients were computed using the outputs of a non-spatial MSMA. Concretely, a GMM was trained on the whole-image score norms and the GradCAM gradients were computed using the negative likelihood estimates. This corresponds to computing voxel-wise attribution maps for an MSMA anomaly score. Thus, the method is denoted as GradCAM-MSMA in Table~\ref{lesion_results}.
 
 \subsection*{Segmentation Metrics for Analysis}
-Similar to Section~\ref{cat-seg-study}, I chose mean surface distance (MSD), and the Hausdorff distance as the segmentation metrics to compare the results. These metrics compute the distance between the surfaces of the predictions and ground truth and are less biased towards over-segmentations compared to the more popular Dice score. Both distances are computed in a directed manner i.e. the distance is computed from the ground truth to the prediction. For Hausdorff distance, the 99-th percentile is used. In addition to distance metrics, component-wise metrics were also computed. Connected components were computed from the voxel-wise segmentation masks by considering an 8-connectivity-neighborhood (diagonals were included as neighbours). We assign a \textit{true positive} (TP) label to a component in the prediction which overlaps with any component in the ground-truth at any voxel location. Conversely, the absence of any overlap is used to keep a tally of the number of \textit{false positives} (FP). Table~\ref{lesion_results} reports the True Positive Rate (TPR = TP/(TP+FN)) and the Positive Predictive Value (PPV = TP/(TP+FP)). 
+Similar to Section~\ref{sec:cat-seg-study}, I chose mean surface distance (MSD), and the Hausdorff distance as the segmentation metrics to compare the results. These metrics compute the distance between the surfaces of the predictions and ground truth and are less biased towards over-segmentations compared to the more popular Dice score. Both distances are computed in a directed manner i.e. the distance is computed from the ground truth to the prediction. For Hausdorff distance, the 99-th percentile is used. In addition to distance metrics, component-wise metrics were also computed. Connected components were computed from the voxel-wise segmentation masks by considering an 8-connectivity-neighborhood (diagonals were included as neighbours). We assign a \textit{true positive} (TP) label to a component in the prediction which overlaps with any component in the ground-truth at any voxel location. Conversely, the absence of any overlap is used to keep a tally of the number of \textit{false positives} (FP). Table~\ref{lesion_results} reports the True Positive Rate (TPR = TP/(TP+FN)) and the Positive Predictive Value (PPV = TP/(TP+FP)). 
 
 
 \begin{table*}[!ht]
@@ -94,7 +94,7 @@ Similar to Section~\ref{cat-seg-study}, I chose mean surface distance (MSD), and
 \begin{tabular}{lrr|rr}
 {} &        99-HD~$\downarrow$~~&      MSD~$\downarrow$~~~~~&        TPR~$\uparrow$~~~~&             PPV~$\uparrow$~~~~~\\
 \midrule
-AE           &  12.27$\pm$~0.51 &  3.63$\pm$~0.35 &  0.44$\pm$~0.02 &  0.19$\pm$~0.01 \\
+AE~\cite{aelu2023} &  12.27$\pm$~0.51 &  3.63$\pm$~0.35 &  0.44$\pm$~0.02 &  0.19$\pm$~0.01 \\
 Inpaint      &  13.26$\pm$~0.50 &  3.71$\pm$~0.27 &  0.63$\pm$~0.02 &  0.50$\pm$~0.02 \\
 Restoration  &   8.67$\pm$~0.53 &  2.68$\pm$~0.36 &  0.68$\pm$~0.02 &  0.17$\pm$~0.01 \\
 GradCAM-MSMA &  12.68$\pm$~0.54 &  3.75$\pm$~0.37 &  0.43$\pm$~0.02 &  0.16$\pm$~0.01 \\
@@ -106,8 +106,15 @@ Spatial-MSMA &  \textbf{7.05~$\pm$~0.61} &  \textbf{2.10~$\pm$~0.43} &  \textbf{
 \end{table*}
 
 \subsection*{Results}
+\begin{figure}[tbhp]
+\centering
+\includegraphics[width=1.01\textwidth, height=1.05\textwidth]{figures/lesion_heatmaps-l.pdf}
+\caption{Qualitative comparison of anomaly heatmaps across different methods. The first row shows random axial slices of the volumetric input samples. The lesions are highlighted in magenta. Each column is a slice from random individuals. Note how Spatial-MSMA consistently detects all the lesions in the image, while other methods tend to miss smaller lesions.}
+\label{fig:lesion-comp}
+\end{figure}
 
-Table~\ref{lesion_results} reports the segmentation performance of all the methods tested. Note that due to the size of the lesions, the segmentation task was difficult for all models. However, Spatial-MSMA significantly outperforms the competition. Compared to baselines, Spatial-MSMA shows the lowest distance metrics. These metrics reflect the specificity of the model's segmentation capabilities. Lower distances imply that the models segmentations have tighter boundaries around the anomalies, compared to baselines. Conversely, the component-wise metrics reflect the sensitivity of the model to anomalous regions in the image, regardless of size. Spatial-MSMA shows excellent detection capabilities, evident by the $0.83$ TPR as well as the exceptionally high PPV of $0.96$ (recall that the maximum possible PPV is 1.0). This implies that Spatial-MSMA detects few false positives, an advantageous trait in anomaly detection.
+
+Table~\ref{lesion_results} reports the segmentation performance of all the methods tested. Note that due to the size of the lesions, the segmentation task was difficult for all models. However, Spatial-MSMA significantly outperforms the competition. Compared to baselines, Spatial-MSMA shows the lowest distance metrics. These metrics reflect the specificity of the model's segmentation capabilities. Lower distances imply that the models segmentations have tighter boundaries around the anomalies, compared to baselines. Conversely, the component-wise metrics reflect the sensitivity of the model to anomalous regions in the image, regardless of size. Spatial-MSMA shows excellent detection capabilities, evident by the $0.83$ TPR as well as the exceptionally high PPV of $0.96$ (recall that the maximum possible PPV is 1.0). This implies that Spatial-MSMA detects few false positives, an advantageous trait in anomaly detection. We can qualitatively observe the results in Figure~\ref{fig:lesion-comp}. The plotted heatmaps are clipped at the 90th percentile for each sample i.e. the range represents the top-$10\%$ of the anomaly scores. Note that while Spatial-MSMA tends towards over-segmentation, it manages to detect most if not all the lesions. Other baselines such as Inpaint are overly biased towards larger anomalies, and often fail to detect smaller lesions.
 
 \section{Conclusion}
 This chapter introduced Spatial-MSMA: an extension to MSMA that enables localization of anomalies. The key insight is to use a conditional likelihood model to learn the distribution of patch score norms, conditioned on the patch location and surrounding context. In my experiments, Spatial-MSMA succeeds at identifying anomalous regions in an image and shows significant performance improvements over baselines. While this chapter focused on experimentally verifying the capabilities of Spatial-MSMA using ground-truth data, the next chapter will investigate the data exploration capabilities of this approach.
