--- a/ch6-ds.tex
+++ b/ch6-ds.tex
@@ -114,11 +114,11 @@ This case study aims to uncover brain morphometric phenotypes that are associate
 \subsection*{Data and Methodology}
  % As a first pass, all images with low automated QC scores were removed. --- > move this into appendix or ch:local
  
-As in Chapter~\ref{ch:localizing}, we will be using samples from the ABCD and HCPD study as our reference inliers. I will denote this as ABCD-HCPD. This cohort was preprocessed to remove any outlying samples. To keep the inlier cohort as nominal as possible, we used the Child Behavior Checklist (CBCL)~\cite{achenbachChildBehaviorChecklist1999} scores as our filtering mechanism. This checklist assesses the behavior and emotional competencies of children. Children with behavioral problems tend to score high on this test. For our analysis, all children that scored above a t-score of 66 ($\tilde{95}$-th percentile) in the summary scores as well as \textit{any} of the subscores were removed. Note that this is more conservative than only using the summary scales.
+As in Chapter~\ref{ch:localizing}, we will be using samples from the ABCD and HCPD study as our reference inliers. I will denote this as ABCD-HCPD. This cohort was preprocessed to remove any outlying samples. To keep the inlier cohort as nominal as possible, we used the Child Behavior Checklist (CBCL)~\cite{achenbachChildBehaviorChecklist1999} scores as our filtering mechanism. This checklist assesses the behavior and emotional competencies of children. Children with behavioral problems tend to score high on this test. For our analysis, all children that scored above a t-score of 66 ($\sim 95$-th percentile) in the summary scores as well as \textit{any} of the subscores were removed. Note that this is more conservative than only using the summary scales.
 
-Our testing population is retrieved from the Infant Brain Imaging Study (IBIS) study~\tempcite{IBIS}. The goal of the study is to investigate brain development starting from infancy and following up at later ages. The study is primarily focused on investigating Autism Spectrum Disorder (ASD) but has also gathered data for Down's Syndrome. This section will be looking at school-age scans as they best overlap with the ages in the ABCD study. IBIS uses a protocol to determine typically developing children, as a means of obtaining a control population. These control samples have to be non-ASD as well as low-likelihood (no older sibling with ASD). The control population was further filtered using Autism Diagnostic Observation Schedule (ADOS)~\tempcite{ADOS} scores. Specifically, we removed samples that had an ADOS score above 2 measured at the age of 2 years.
+Our testing population is retrieved from the Infant Brain Imaging Study (IBIS) study. The goal of the study is to investigate brain development starting from infancy and following up at later ages. The study is primarily focused on investigating Autism Spectrum Disorder (ASD) but has also gathered data for Down's Syndrome. This section will be looking at school-age scans as they best overlap with the ages in the ABCD study. IBIS uses a protocol to determine typically developing children, as a means of obtaining a control population. These control samples have to be non-ASD as well as low-likelihood (no older sibling with ASD). The control population was further filtered using Autism Diagnostic Observation Schedule (ADOS)~\cite{lord2012autism} scores. Specifically, we removed samples that had an ADOS severity score above 2 measured at the age of 2 years.
 
-A 3D diffusion model was trained on the ABCD-HCPD dataset. At inference time, the diffusion model was used to obtain score norms for the IBIS data as well as a held out test-set of ABCD-HCPD. A Spatial-MSMA model was also trained on the score-norms of the ABCD-HCPD samples. This allowed us to obtain the voxel-wise anomaly scores for each test sample. These anomaly scores were then averaged according to ROIs retrieved from the AAL atlas~\cite{ROLLS2020116189}. Additionally, a SOM was trained on the inlier score-norms from all three studies. 
+A 3D diffusion model was trained on the ABCD-HCPD dataset. At inference time, the diffusion model was used to obtain score norms for the IBIS data as well as a held out test-set of ABCD-HCPD. A Spatial-MSMA model was also trained on the score-norms of the ABCD-HCPD samples. This allowed us to obtain the voxel-wise anomaly scores for each test sample. These anomaly scores were then averaged according to ROIs retrieved from the AAL atlas~\cite{ROLLS2020116189}. Additionally, a SOM with a height of 7 nodes and width of 9 nodes was trained on the inlier score-norms from all three studies. 
 
 % Additionally, the CSF was also included in the analysis
 
@@ -128,22 +128,22 @@ A 3D diffusion model was trained on the ABCD-HCPD dataset. At inference time, th
 
 Intuitively, MSMA capture a feature space of atypicality. As such, different regions in the score-norm space may correspond to different manifestations of abnormalities. I argue that we can employ SOM to map the score-norm space and descretize it into phenotypes/prototypes of atypicality. Using SOM, it is possible to explore whether there exist sub-populations in the DS cohort that are differentially expressed in the score-norm space. 
 
-Recall that in SOMs, each sample is matched with one BMU (represented as a cell in the grid). Consider the BMU with the most matches for a particular cohort. I will denote this BMU as the Maximal-Prototype for that cohort. ~\figref{fig:som-abcd} shows a SOM trained on the score-norms of the inliers. The heatmap reflects the neighbouring distances between each grid cell, and can be interpreted as the relative density of each region in the score-norm space.  We can clearly observe a Maximal-Prototype for the DS cohort. Out of 28 DS cases, 16 match this prototype. Interestingly, 12 out of the matching 16 are female, pointing to a female-dominant DS phenotype.
+Recall that in SOMs, each sample is matched with one BMU (represented as a cell in the grid). Consider the BMU with the most matches for a particular cohort. I will denote this BMU as the Maximal-Prototype for that cohort. ~\figref{fig:som-abcd} shows a SOM trained on the score-norms of the inliers. The heatmap reflects the neighbouring distances between each grid cell, and can be interpreted as the relative density of each region in the score-norm space.  We can clearly observe a Maximal-Prototype for the DS cohort. Out of 28 DS cases, 16 match this prototype. Interestingly, 12 out of the matching 16 are female, pointing to a female-dominant DS phenotype. Also plotted are prototypes for other cohorts such as ASD and Atypicals. Atypicals refers to samples that scored above a threshold of 2 on the ADOS scores, and were thus labelled as outliers.
 
 \begin{figure}[tbhp]
 \centering
-\includegraphics[width=0.9\textwidth]{figures/ds_proto–hex.png}
+\includegraphics[width=\textwidth]{figures/som_9x7.png}
 \caption{A Self-Organizing Map trained on score-norms of brain MRIs of typically developing children. The heatmap represents the distance between neighbouring grid cells
 % Overlayed are the distributions of all cohorts matched to each cell in the grid.
 Overlayed are the prototypes for different cohorts.
-The markers are scaled according to the number of samples matching the BMU at that location. Protoypes for Autism (ASD) and the inliers (LR-Typical) are also displayed for reference. Note the Maximal-Prototype for DS is significantly larger than the rest. 
+The markers are scaled according to the number of samples matching the BMU at that location. Protoypes for Autism (ASD), inliers (HR-Typical), and outliers (Atypicals) are also displayed for reference. Markers are scaled by the number of matching samples. Note the Maximal-Prototype for DS is significantly larger than the rest. 
 }
 \label{fig:som-abcd}
 \end{figure}
 
 \begin{figure}[tbhp]
 \centering
-\includegraphics[width=0.8\textwidth]{figures/somhparams.png}
+\includegraphics[width=0.8\textwidth]{figures/som_stability.pdf}
 \caption{Hyperparameter analysis of SOM train on MSMA score-norms. The x-axis represent the width of the SOM grid, measured in number of neurons. The y-axis represents the height of the SOM grid. The heatmap shows the number of samples belonging to the Maximal-Prototype for each experiment. Note the diagonal 'stable' regions of the hyperparameter space.}
 \label{fig:som-hparams}
 \end{figure}
