--- a/diss.bib
+++ b/diss.bib
@@ -1,3 +1,10 @@
+@article{lord2012autism,
+  title={Autism diagnostic observation schedule},
+  author={Lord, Catherine and Rutter, Michael and Goode, Susan and Heemsbergen, Jacquelyn and Jordan, Heather and Mawhood, Lynn and Schopler, Eric},
+  journal={Journal of Autism and Developmental Disorders},
+  year={2012}
+}
+
 @article{abdi2010principal,
   title={Principal Component Analysis},
   author={Abdi, Herv{\'e} and Williams, Lynne J},
