--- a/frontmatter/abbreviations.tex
+++ b/frontmatter/abbreviations.tex
@@ -9,12 +9,14 @@
 \newcommand{\Abi}[2]{\noindent #1 \hspace{1.5cm} \= #2 \\}
 
 \begin{tabbing}
-\Abi{EBM}{Energy-Based Model}
+\Abi{ASD}{Autism Spectrum Disorder}
+\Ab{DS}{Down Syndrome}
 \Ab{DSM}{Denoising Score Matching}
+\Ab{EBM}{Energy-Based Model}
 \Ab{GNSM}{Gumbel Noise Score Matching}
 \Ab{MSMA}{Multiscale Score Matching Analysis}
-\Ab{OOD}{Out-of-Distribution Detetction}
-\Ab{AYO}{Add Your Own in alphabetic order\ldots}
+\Ab{OOD}{Out-of-Distribution Detection}
+% \Ab{AYO}{Add Your Own in alphabetic order\ldots}
 \end{tabbing}
 
 \clearpage
