--- a/ch1-intro.tex
+++ b/ch1-intro.tex
@@ -4,7 +4,7 @@
 
 Anomaly detection is an active area of research with many potential benefits for healthcare, manufacturing, and financial industries. While the specific realization of an anomaly will vary across applications, they term usually refers to samples that are rare and markedly different from the average.
 
-In healthcare, anomalies exhibit themselves as medical pathologies such as lesions and tumors. In  manufacturing industries, anomalies may be defective objects in the manufacturing process. In finance, fraudulent transactions, system misuse, and suspicious activity in the networking systems are common examples of anomalies. Figure~\ref{fig:anoex} gives pictorial examples of the types of anomalies that may be observed across industries.
+In healthcare, anomalies exhibit themselves as medical pathologies such as lesions and tumors. In  manufacturing industries, anomalies can take the form of defects on the products being fabricated. In the financial sector, examples of common anomalies include fraudulent transactions, misuse of systems, and suspicious activity within computer networks. Figure~\ref{fig:anoex} gives pictorial examples of the types of anomalies that may be observed across industries.
 
 \begin{figure}[bhp]
 \centering
@@ -17,15 +17,12 @@ In healthcare, anomalies exhibit themselves as medical pathologies such as lesio
 \end{figure}%
 
 \subsection*{Detecting Anomalies in Medical Imaging}
+This thesis will approach the anomaly detection problem from the lens of medical imaging.
+Identifying anomalies in images such as MRI scans can assist clinicians in detecting conditions earlier and initiating treatment more rapidly. Further, automating the detection of pathologies can help reduce error rates. For instance, it is estimated that radiologists can miss a relevant pathology in 5-10\% of scans~\cite{bruno_understanding_2015}. Of these medical errors, 60-80\% could be explained by ``perceptual errors" i.e. a finding is present on the image but is missed. Recent breakthroughs in deep learning have demonstrated tremendous abilities in detecting pathologies such as tumors and lesions~\cite{kim_deep_2019,lee_deep_2017}.
 
-Identifying anomalies in images such as MRI scans can assist clinicians in detecting conditions earlier and initiating treatment more rapidly. Further, automating the detection of pathologies can help reduce error rates. For instance, it is estimated that radiologists can miss a relevant pathology in 5-10\% of scans~\cite{bruno_understanding_2015}. Of these medical errors, 60-80\% could be explained by "perceptual errors" i.e. a finding is present on the image but is missed. Recent breakthroughs in deep learning have demonstrated tremendous abilities in detecting pathologies such as tumors and lesions~\cite{kim_deep_2019,lee_deep_2017}.
+There is much enthusiasm in productionizing these deep learning models in the clinical setting to augment the diagnostic abilities of medical practitioners and reducing error rates. Currently, some companies have deployed AI models for clinical use-cases~\cite{CHAMBERLIN2023e368}, albeit with limited success. Studies have shown that these models tend to trade-off false positives for higher sensitivity of detection~\cite{niehoffEvaluationClinicalPerformance2023}. As such, they are more reliable for their negative prediction properties i.e. clinicians may use the model to increase trust in their own assessments if the model also does not discover any pathologies. Furthermore, these models are trained in a supervised manner and can only detect the specific abnormalities included in training. This leaves much room for research into developing general purpose anomaly detectors and improving their false-detection rates.
 
-There is much enthusiasm in productionizing these deep learning models in the clinical setting to augment the diagnostic abilities of medical practitioners and reducing error rates. Currently, some companies have deployed AI models for clinical use-cases~\cite{CHAMBERLIN2023e368}, albeit with limited success. Studies have shown that these models tend to trade-off false positives for higher sensitivity of detection~\cite{niehoffEvaluationClinicalPerformance2023}. As such, they are more reliable for their negative prediction properties i.e. clinicians may use the model to increase trust in their own assessments if the model also does not discover any pathologies. Furthermore, these models are trained in a supervised manner and can only detect the specific abnormalities included in training. This leaves much room for research into developing general purpose anomaly detectors  and improving their false-detection rates.
-
-Note that while this thesis will ultimately focus on the medical imaging application, the methodology presented in this work is general-purpose. One can easily adapt the proposed deep learning model to any application as well as any data modality~\footnote{With the exception of text as it may require nontrivial modifications to the underlying model and training objective}.
-
-
-
+Note that while this thesis will ultimately build an anomaly detector to be used for medical imaging, the methodology presented in this document is general-purpose. One can easily adapt the proposed deep learning model to any application as well as most data modalities~\footnote{With the exception of text as it requires nontrivial modifications to the underlying training objective}.
 
 
 %TODO: show MOOD gorrilla and bruno coin..?
@@ -36,11 +33,13 @@ Most existing pathology detectors are trained using labeled data (supervised tra
 This makes it impractical to predetermine the entire set of possible anomalies and collect data apriori.
 
 In response to the dearth of labeled data, progress has been made towards developing unsupervised anomaly detectors~\cite{bergmann2020uninformed,baur_deep_2019,ruff_unifying_2021}. These models are trained on unlabeled images representative of a normal/typical population.
-However, meta-analyses have revealed that there is no clear winner in this space~\cite{baur2021,ruff_unifying_2021}. Models behave inconsistently across different pathologies, and there is no clear correlation between model complexity and detection performance. Another common shortcoming of these models is often the training objective itself, which tends to be tangentially related to anomaly detection.
+However, meta-analyses have revealed that there is no clear winner in this space~\cite{baur2021,ruff_unifying_2021}. Models behave inconsistently across different pathologies, and there is often no obvious correlation between model complexity and detection performance.
+% Another frequent issue with these models is that the training objective itself is often only indirectly related to the task of anomaly detection
+Another major limitation of many existing unsupervised anomaly detection models is that their training objectives do not directly optimize for the task of identifying anomalies, but rather optimize for auxiliary objectives that are only tangentially related to anomaly detection.
 
 \subsection*{Autoencoders Do Not Make Good Anomaly Detectors}
 % an example of tagetial
-An overwhelming majority of anomaly models are based on some flavor of the autoencoding objective \cite{baur_deep_2019,baur2021,tschuchnig_anomaly_2022,kascenas2023} i.e. the model is tasked to reproduce the input image. The assumption is that, having only seen typical samples during training, the autoencoder will fail to reconstruct anomalies. Consequently, one can use reconstruction errors as anomaly scores. However, one can foresee a paradox underlying this assumption. As the performance of the autoencoder increases, its reconstruction capabilities improve, and it is able to generalize to unseen data. This implies that a performant autoencoder will be a poor anomaly detector., which is exactly what we observe in practice. Well-optimized autoencoders learn to reconstruct anomalies with ease. Researchers thus try to limit the performance capabilities by including regularization schemes into the objective so that the autoencoder is performant \textit{only} on inlier data and fails to generalize to other datasets. I argue that these constraints are ad-hoc solutions, and that the objective itself is inappropriate for the task. We need the training objective to be more closely aligned to learning typicality. 
+An overwhelming majority of anomaly models are based on some flavor of the autoencoding objective~\cite{baur_deep_2019,baur2021,tschuchnig_anomaly_2022,kascenas2023} i.e. the model is tasked to reproduce the input image. The assumption is that, having only seen typical samples during training, the autoencoder will fail to reconstruct anomalies. Consequently, one can use reconstruction errors as anomaly scores. However, one can foresee a paradox underlying this assumption. As the performance of the autoencoder increases, its reconstruction capabilities improve, and it is able to generalize to unseen data. This implies that a performant autoencoder will be a poor anomaly detector., which is exactly what we observe in practice. Well-optimized autoencoders learn to reconstruct anomalies with ease. Researchers thus try to limit the performance capabilities by including regularization schemes into the objective so that the autoencoder is performant \textit{only} on inlier data and fails to generalize to other datasets. I argue that these constraints are ad-hoc solutions, and that the objective itself is inappropriate for the task. We need the training objective to be more closely aligned to learning typicality. 
 
 \begin{figure}[tbhp]
 % \label{fig:failures}
@@ -64,7 +63,7 @@ An overwhelming majority of anomaly models are based on some flavor of the autoe
 % \end{subfigure}
 \end{figure}
 
-Likelihood models are a natural candidate for anomaly detection. In fact, most definitions of the term `anomaly" invoke concepts related to probability. In the past decade, there have been many exciting advances in deep likelihood models such as PixelCNN, Glow, and an explosion of an entire class of so-called normalizing flow models.
+Likelihood models are a natural candidate for anomaly detection. In fact, most definitions of the term ``anomaly" invoke concepts related to probability. In the past decade, there have been many exciting advances in deep likelihood models such as PixelCNN, Glow, and an explosion of an entire class of so-called normalizing flow models.
 
 These methods will estimate the probability densities of the samples with respect to a training distribution. A high probability density is an indication that the data point belongs to a set of samples that are likely to occur.
 Conversely, out-of-distribution (OOD) samples will tend to reside in low-density probability regions.
@@ -86,10 +85,10 @@ Researchers prescribing to this school-of-thought argue that high dimensional pr
 
 In this thesis, I will develop a case for a particular methodology, called denoising score matching, as a promising solution to unsupervised anomaly detection. A \textit{score} is defined as the gradient of the log-probability-density with respect to the data. Conceptually, a score is a vector field that points in the direction where the likelihood increases the most. Score matching is a technique that is utilized to estimate this vector. Intuitively, score matching estimates how far a given data point is from the data distribution. In the context of anomaly detection, score matching offers a powerful, yet under-explored, tool to discern pathological patterns from normal variations.
 
-I posit that a multi-scale analysis of score estimates can effectively identify anomalies stemming from multiple underlying factors. In this research, ``multi-scale" refers to the multiple levels of noise that are used to perturb the data. Intuitively, higher noise levels obscure local information, forcing the model to learn more global patterns. Therefore, by utilizing multiple noise levels during training, both global and local contextual features can be captured. This multi-scale capacity is particularly beneficial for anomaly detection in medical images, where anomalies may manifest as localized textures or as large-scale structures.
+I posit that a \textit{multiscale} analysis of score estimates can effectively identify anomalies stemming from multiple underlying factors. In this research, ``multiscale" refers to the multiple levels of noise that are used to perturb the data. Intuitively, higher noise levels obscure local information, forcing the model to learn more global patterns. Therefore, by utilizing multiple noise levels during training, both global and local contextual features can be captured. This multiscale capacity is particularly beneficial for anomaly detection in medical images, where anomalies may manifest as localized textures or as large-scale structures.
 
 
-Note that the idea of using gradients of the log density as a means of outlier detection has been done in the past, most notably by~\cite{Grathwohl2020Your} and~\cite{pmlr-v48-zhai16}. However, a bit surprisingly, neither work explicitly connected their ideas to score matching. \cite{Grathwohl2020Your} described the norm of the gradient of the log-density as "Approximate Mass", obtained from an Energy-Based Model (EBM). The authors even noted how the Approximate Mass predictor greatly outperformed likelihoods for the OOD task but did not explore the idea further. Their work can be considered as special-case of my proposed method i.e. as a single-scale score estimator trained with sufficiently low noise would be estimating the gradient norms of the true log density. I will note that my technique significantly outperforms Approximate Mass, as reported in~\cite{mahmood2021multiscale}. \cite{pmlr-v48-zhai16} chanced upon gradient norms while exploring energy-based models for outlier detection. They correctly identified how reconstruction errors obtained via an energy-based model would correspond to the gradient of the log density. However, they did not see an improvement over simply using the energy scores. I posit that they too would have seen improvements by adopting a multi-scale approach. 
+Note that the idea of using gradients of the log density as a means of outlier detection has been done in the past, most notably by~\cite{Grathwohl2020Your} and~\cite{pmlr-v48-zhai16}. However, a bit surprisingly, neither work explicitly connected their ideas to score matching. \cite{Grathwohl2020Your} described the norm of the gradient of the log-density as ``Approximate Mass", obtained from an Energy-Based Model (EBM). The authors even noted how the Approximate Mass predictor greatly outperformed likelihoods for the OOD task but did not explore the idea further. Their work can be considered as special-case of my proposed method i.e. as a single-scale score estimator trained with sufficiently low noise would be estimating the gradient norms of the true log density. I will note that my technique significantly outperforms Approximate Mass, as reported in~\cite{mahmood2021multiscale}. \cite{pmlr-v48-zhai16} chanced upon gradient norms while exploring energy-based models for outlier detection. They correctly identified how reconstruction errors obtained via an energy-based model would correspond to the gradient of the log density. However, they did not see an improvement over simply using the energy scores. I posit that they too would have seen improvements by adopting a multi-scale approach. 
 
 To my knowledge, my work has been the first to explore anomaly detection from the perspective of score matching. This thesis is also the first to empirically underscore the effectiveness of multiple noise scales for this task.
 
@@ -102,4 +101,5 @@ Note that the diversity of my training samples will always be a limiting factor 
 
 \section{Thesis Statement}
 
-Score norms, computed by neural score estimators, produce a space in which inlying, typical populations may be separated from a population that is out-of-distribution or anomalous.
+% Score norms, computed by neural score estimators, produce a space in which inlying, typical populations may be separated from a population that is out-of-distribution or anomalous.
+Score norms, computed by neural score estimators, produce a space in which out-of-distribution or anomalous samples may be separated from the inlying, typical samples.
